styled needs and informations from admin no functionality is implemented; change position of delete button in requests

--- a/administration/templates/administration/informations.html
+++ b/administration/templates/administration/informations.html
@@ -1,91 +1,169 @@
 {% extends 'administration/base_admin.html' %}
-
 {% block content %}
-<div class="row">
+{% load filter %}
 
-  <div class="[ col-xs-12 col-sm-offset-2 col-sm-8 ]">
+<!-- informations -->
+<div id="standard-modal">
+    <div class="modal-content">
+        <div class="modal-header">
+            <div class="row">
+                <div class="col-sm-6" >
+                    <h2 class="text-center" id="standard-modal-headline">Informations</h2>
+                </div>
+                <div  class="col-sm-4" style="margin-top: 20px;">
+                    <select style="width: 100%">
+                        <option value="all">all Informations</option>
+                        <option value="reported informations"> only reported Informations</option>
+                        <option value="reported comments"> only reported Comments</option>
+                    </select>
+                </div>
+                <div  class="col-sm-2" style="margin-top: 15px; margin-bottom: 10px;">
+                </div>
+            </div>
+        </div>
+        <div class="modal-body">
+            <input id="standard-grey-button-bold" type="submit" class="btn btn-block btn-lg btn-primary" value="Filter"/>
+            <div class="list-group">
+                {% for info in infos %}
 
-    <div class="btn-group">
-      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Range <span class="caret"></span>
-      </button>
-      <ul class="dropdown-menu">
-        <li><a href="#">5 km</a></li>
-        <li><a href="#">10 km</a></li>
-        <li><a href="#">20 km</a></li>
-        <li role="separator" class="divider"></li>
-        <li><a href="#">100 km</a></li>
-      </ul>
+                    <!-- list all informations -->
+                    <a class="list-group-item" id="standard-list-group-item-div">
+                        <div class="row">
+                            <div class="col-sm-12" data-toggle="modal" data-target=".{{ info.id }}">
+                                <h4 class="list-group-item-heading">{{ info.headline }}</h4>
+                                <p class="list-group-item-text">{{ info|get_short_text:160 }}</p>
+                            </div>
+                            <div class="col-sm-11" data-toggle="modal" data-target=".{{ info.id }}">
+                                <h6><br>from: {{ info.date }} / number of reports: {{ info.number_reports }}</h6>
+                            </div>
+                            <div class="col-sm-1">
+                                <button type="button" id="{{ info.id }}" class="btn btn-default btn-sml standard-grey-button-light " href="" style="float: right; margin-top: 10px;" onclick=""><span class="glyphicon glyphicon-remove"></span> Delete</button>
+                            </div>
+                        </div>
+                    </a>
+
+                    <!-- modal for every information -->
+                    <div class="modal fade {{ info.id }}"  role="dialog" aria-labelledby="request" aria-hidden="true">
+                        <div class="modal-dialog modal-lg">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                    <h2>{{info.headline}}</h2>
+                                    <h6>from: {{ info.date }} / number of reports: {{ info.number_reports }}</h6>
+                                </div>
+                                <div class="modal-body">
+                                    <p>{{ info.text }}</p>
+                                    <p>Location:</p>
+                                    <div id="map-container"></div>
+                                </div>
+                                <div class="modal-footer">
+                                    <button id="standard-grey-button-bold" type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                {% empty %}
+                    <h4>There are no informations.</h4>
+                {% endfor %}
+            </div>
+        </div>
     </div>
-    <div class="btn-group">
-      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Category <span class="caret"></span>
-      </button>
-      <ul class="dropdown-menu">
-        <li><a href="#">Water</a></li>
-        <li><a href="#">Energy</a></li>
-        <li><a href="#">Pokemon</a></li>
-        <li role="separator" class="divider"></li>
-        <li><a href="#">Separated link</a></li>
-      </ul>
-    </div>
-    <div class="btn-group pull-right">
-      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Cards per Page <span class="caret"></span>
-      </button>
-      <ul class="dropdown-menu">
-        <li><a href="#">10</a></li>
-        <li><a href="#">25</a></li>
-        <li><a href="#">50</a></li>
-        <li role="separator" class="divider"></li>
-        <li><a href="#">All</a></li>
-      </ul>
-    </div>
-  </div>
-</div>
-<br>
-<div class="row">
-   <div class="[ col-xs-12 col-sm-offset-2 col-sm-8 ]">
+</div><!-- end informations -->
 
-     <ul class="event-list">
-       {% for info in infos%}
-       <li>
-          <time>
-             <div>{{ info.date }}</div>
-           </time>
-         <div class="info">
-           <h2 class="title">{{ info.headline }}</h2>
-           <p class="desc">{{ info.text }}</p>
-          <ul>
-             <li style="width:20%;">comments (3)</li>
-             <li style="width:20%;">write comment<span class="fa fa-question"></span></li>
-             <li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-map-marker"></span>Location</a></li>
-           </ul>
-         </div>
 
-       </li>
-       {% endfor %}
-     </ul>
-   </div>
- </div>
- <div class="row">
-   <div class="[ col-xs-12 col-sm-offset-2 col-sm-8 ] text-center">
-     <nav>
-       <ul class="pagination">
-         <li class="disabled"><a href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
-         <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
-         <li><a href="#">2</a></li>
-         <li><a href="#">3</a></li>
-         <li><a href="#">4</a></li>
-         <li><a href="#">5</a></li>
-         <li>
-           <a href="#" aria-label="Next">
-             <span aria-hidden="true">&raquo;</span>
-           </a>
-         </li>
-       </ul>
-     </nav>
-   </div>
- </div>
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css"></script>
+<script src="http://maps.googleapis.com/maps/api/js"></script>
+<script>
+
+
+	var map;
+	var marker;
+	var myCenter=new google.maps.LatLng(51.508742,-0.120850);
+	var geocoder;
+	var infowindow;
+
+	function initialize() {
+    	geocoder = new google.maps.Geocoder()
+			var mapProp = {
+  			center:myCenter,
+  			zoom:2,
+  			mapTypeId:google.maps.MapTypeId.ROADMAP,
+				mapTypeControl: false,
+        panControl:false,
+        rotateControl:false,
+				mapTypeControl:true,
+        streetViewControl: false
+  		};
+  		marker=null;
+
+  		map = new google.maps.Map(document.getElementById("map-container"),mapProp);
+  		google.maps.event.addListener(map, 'click', function(event) {
+    		placeMarker(event.latLng);
+  		});
+	}
+
+
+
+	function getLocation() {
+    	if (navigator.geolocation) {
+    	    navigator.geolocation.getCurrentPosition(showPosition);
+    	} else {
+    	    x.innerHTML = "Geolocation is not supported";
+    	    y.innerHTML = "by this browser.";
+    	}
+	}
+
+	function showPosition(position) {
+    	var latlng={lat: parseFloat(position.coords.latitude), lng: parseFloat(position.coords.longitude)};
+    	placeMarker(latlng);
+	}
+
+
+	function placeMarker(location) {
+	    if(marker){
+	        infowindow.close();
+	        marker.setPosition(location);
+	        geocoder.geocode({'location': location}, function(results, status){
+	            infowindow.setContent(results[0].formatted_address);
+	            infowindow.open(map,marker);
+	        })
+	    }
+	    else{
+	        marker = new google.maps.Marker({
+	        position: location,
+	        map: map,
+	        });
+	        geocoder.geocode({'location': location}, function(results, status){
+	            infowindow = new google.maps.InfoWindow({content: results[0].formatted_address});
+	            infowindow.open(map,marker);
+	        })
+	       	map.setZoom(6);
+	    }
+		map.setCenter(marker.getPosition());
+	}
+	google.maps.event.addDomListener(window, 'load', initialize);
+
+  function addressInput(){
+    if(marker != null){
+      $('#lng').val(marker.getPosition().lng());
+      $('#lat').val(marker.getPosition().lat());
+    }
+    else if($('#State').val() != "" && $('#City').val() != ""){
+			var state = $('#State').val();
+			var city = $('#City').val();
+      $('#addressinput').val(state+ " " + city);
+    }
+  }
+</script>
+<script type='text/javascript'>
+ 	$('.{{ info.id }}').on('shown.bs.modal', function(e) {
+        initialize();
+    });
+
+</script>
 
 {% endblock %}
