--- a/administration/templates/administration/requests.html
+++ b/administration/templates/administration/requests.html
@@ -25,7 +25,7 @@
                                     <h6><br>by {{ request.email }} from {{ request.create_date }}</h6>
                                 </div>
                                 <div class="col-sm-1">
-                                    <button type="button" id="{{ request.id }}" class="btn btn-default btn-sml standard-grey-button-light " href="" style="float: right;" onclick="done_request(this)"><span class="glyphicon glyphicon-ok"></span> Done</button>
+                                    <button type="button" id="{{ request.id }}" class="btn btn-default btn-sml standard-grey-button-light " href="" style="float: right; margin-top: 10px;" onclick="done_request(this)"><span class="glyphicon glyphicon-ok"></span> Done</button>
                                 </div>
                             </div>
                         </a>
@@ -81,7 +81,7 @@
                                     </div>
 
                                     <div class="col-sm-1">
-                                        <button type="button" id="{{ request.id }}" class="btn btn-default btn-sml standard-grey-button-light " href="" style="float: right;" onclick="add_worker(this)"><span class="glyphicon glyphicon-pencil"></span> Work On</button>
+                                        <button type="button" id="{{ request.id }}" class="btn btn-default btn-sml standard-grey-button-light " href="" style="float: right; margin-top: 10px;" onclick="add_worker(this)"><span class="glyphicon glyphicon-pencil"></span> Work On</button>
                                     </div>
                                 </div>
                             </a>
