--- a/basics/templates/basics/information_all.html
+++ b/basics/templates/basics/information_all.html
@@ -71,7 +71,7 @@
            <p class="desc">{{ info.text }}</p>
           <ul>
              <li style="width:33%;">comments (3)</li>
-             <li style="width:34%;">write comment<span class="fa fa-question"></span></li>
+             <li style="width:34%;"><a href="{% url 'basics:information_view' pk=info.pk %}">write comment</a><span class="fa fa-question"></span></li>
              <li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-map-marker"></span>Location</a></li>
              <li style="width:20%;"> <span class="glyphicon glyphicon-thumbs-up"></span> Like</li>
            </ul>
