--- a/basics/templates/basics/immediate_aid.html
+++ b/basics/templates/basics/immediate_aid.html
@@ -10,33 +10,36 @@
       <form class="form" role="form" method="post" accept-charset="UTF-8" id="login-nav">
         {%csrf_token%}
         <p style="font-size:160%;"> category <p\>
-        <select class="form-control">
-          <option value="Eat & Drink">Eat & Drink</option>
-          <option value="hygiene supplies">hygiene supplies</option>
-          <option value="Medic">Medic</option>
-          <option value="Help">Help</option>
-          <option value="...">...</option>
-          <option value="...">...</option>
-          </select>
+		<select class="form-control" name="{{need.categorie.name}}">
+			{% for categorie in categories%}
+				<option value="{{categorie.id}}">{{categorie.name}}</option>
+			{% endfor %}
+		</select>
         <p style="font-size:160%;"> description <p\>
         <div class="form-group">
-          <input type="Email" class="form-control input-lg" placeholder="email" name="email"  rows="4"></textarea>
+          <input type="Email" class="form-control input-lg" placeholder="email" name="email"  rows="4" value="{{form.email.value}}"></textarea>
         </div>
         <div class="form-group">
-          <input type="description" class="form-control input-lg" placeholder="headline" name="headline"  rows="4"></textarea>
+          <input type="description" class="form-control input-lg" placeholder="headline" name="headline"  rows="4" value="{{need_form.headline.value}}"></textarea>
         </div>
         <div class="form-group">
-          <textarea type="description" class="form-control input-lg" placeholder="description" name="text"  rows="4"></textarea>
+          <textarea type="description" class="form-control input-lg" placeholder="description" name="text"  rows="4" value="{{need_form.text.value}}">{{need_form.text.value}}</textarea>
         </div>
 		<div class="form-group">
         	<p id="choose-location-text">At least we need your location to let people in your neighborhood know that you need help.
       		{% include "basics/map_testing.html" %}</p>
 		</div>	
         <div class="form-group">
-          <input type="submit" class="btn btn-block btn-lg btn-primary" value="Create & Send"/>
+          <input type="submit" onclick="register()" class="btn btn-block btn-lg btn-primary" value="Create & Send"/>
         </div>
       </form>
     </div>
   </div>
 </div>
+<script>
+  //because shit is not working
+  function register(){
+    $("#register_form").submit();
+  }
+</script>
 {% endblock %}
