--- a/administration/templates/administration/informations.html
+++ b/administration/templates/administration/informations.html
@@ -10,45 +10,74 @@
                 <div class="col-sm-6" >
                     <h2 class="text-center" id="standard-modal-headline">Informations</h2>
                 </div>
-                <div  class="col-sm-4" style="margin-top: 20px;">
-                    <select style="width: 100%">
-                        <option value="all">all Informations</option>
-                        <option value="reported informations"> only reported Informations</option>
-                        <option value="reported comments"> only reported Comments</option>
-                    </select>
-                </div>
+                <form class="form" role="form" method="get" accept-charset="UTF-8">
+                {%csrf_token%}
+                    <div  class="col-sm-4" style="margin-top: 20px;">
+                        <select style="width: 100%" name="sel">
+                            <option value="all" selected>all Informations</option>
+                            <option value="reported informations"> only reported Informations</option>
+                            <option value="reported comments"> only reported Comments</option>
+                        </select>
+                    </div>
+                
                 <div  class="col-sm-2" style="margin-top: 15px; margin-bottom: 10px;">
-                    <input id="standard-grey-button-bold" type="submit" class="btn btn-block btn-lg btn-primary" value="Filter"/>
+                    <input id="standard-grey-button-bold" type="submit" class="btn btn-block btn-lg btn-primary"/>
                 </div>
+                </form>
             </div>
         </div>
         <div class="modal-body">
             <div class="list-group">
-                {% for info in infos %}
+                {% if infos %}
+                    {% for info in infos %}
 
-                    <!-- list all informations -->
-                    <div class="list-group-item" id="standard-list-group-item-div">
-                        <div class="row">
-                            <a href="{% url 'administration:information_admin' pk=info.id %}">
-                                <div class="col-sm-12">
-                                    <h4 class="list-group-item-heading">{{ info.headline }}</h4>
-                                    <p class="list-group-item-text">{{ info|get_short_text:160 }}</p>
+                        <!-- list all informations -->
+                        <div class="list-group-item" id="standard-list-group-item-div">
+                            <div class="row">
+                                <a href="{% url 'administration:information_admin' pk=info.id %}">
+                                    <div class="col-sm-12">
+                                        <h4 class="list-group-item-heading">{{ info.headline }}</h4>
+                                        <p class="list-group-item-text">{{ info|get_short_text:160 }}</p>
+                                    </div>
+                                </a>
+                                <a href="{% url 'administration:information_admin' pk=info.id %}">
+                                    <div class="col-sm-11">
+                                        <h6><br>from: {{ info.date }} / number of reports: {{ info.number_reports }}</h6>
+                                    </div>
+                                </a>
+                                <div class="col-sm-1">
+                                    <button type="button" id="{{ info.id }}" class="btn btn-default btn-sml standard-grey-button-light " href="" style="float: right; margin-top: 10px;" onclick="done_request(this)"><span class="glyphicon glyphicon-remove"></span> Delete</button>
                                 </div>
-                            </a>
-                            <a href="{% url 'administration:information_admin' pk=info.id %}">
-                                <div class="col-sm-11">
-                                    <h6><br>from: {{ info.date }} / number of reports: {{ info.number_reports }}</h6>
-                                </div>
-                            </a>
-                            <div class="col-sm-1">
-                                <button type="button" id="{{ info.id }}" class="btn btn-default btn-sml standard-grey-button-light " href="" style="float: right; margin-top: 10px;" onclick="done_request(this)"><span class="glyphicon glyphicon-remove"></span> Delete</button>
                             </div>
                         </div>
-                    </div>
 
-                {% empty %}
-                    <h4>There are no informations.</h4>
-                {% endfor %}
+                    {% empty %}
+                        <h4>There are no informations.</h4>
+                    {% endfor %}
+                {% endif %}
+                {% if comments %}
+                    {% for comment in comments %}
+                        <!-- list all informations -->
+                        <div class="list-group-item" id="standard-list-group-item-div">
+                            <div class="row">
+                                <a href="#">
+                                    <div class="col-sm-12">
+                                        <h4 class="list-group-item-heading">Information Headline: {{ comment.inf.headline }}</h4>
+                                        <p class="list-group-item-text">{{ comment.text }}</p>
+                                    </div>
+                                </a>
+                                <a href="#">
+                                    <div class="col-sm-11">
+                                        <h6><br>from: {{ comment.date }} / number of reports: {{ comment.number_reports }}</h6>
+                                    </div>
+                                </a>
+                                <div class="col-sm-1">
+                                    <button type="button" id="{{ comment.id }}" class="btn btn-default btn-sml standard-grey-button-light " href="" style="float: right; margin-top: 10px;" onclick="#"><span class="glyphicon glyphicon-remove"></span> Delete</button>
+                                </div>
+                            </div>
+                        </div>
+                    {% endfor %}
+                {% endif %}
             </div>
         </div>
     </div>
@@ -63,6 +92,8 @@
           location.href = "{% url 'administration:informations' %}";
       });
   }
+
+
 </script>
 
 {% endblock %}
