add linebreaks for need and information

--- a/administration/templates/administration/information_admin.html
+++ b/administration/templates/administration/information_admin.html
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div class="modal-body">
-            <p>{{ information.text }}</p>
+            <p>{{ information.text | linebreaksbr }}</p>
             <h5>Location:</h5>
             <div id="map-container" style="height: 450px; margin-top: 15px; margin-bottom: 20px;"></div>
             <div class="list-group">
