needs can be filtered

--- a/administration/templates/administration/informations.html
+++ b/administration/templates/administration/informations.html
@@ -21,7 +21,7 @@
                     </div>
                 
                 <div  class="col-sm-2" style="margin-top: 15px; margin-bottom: 10px;">
-                    <input id="standard-grey-button-bold" type="submit" class="btn btn-block btn-lg btn-primary"/>
+                    <input id="standard-grey-button-bold" type="submit" class="btn btn-block btn-lg btn-primary" value="Filter"/>
                 </div>
                 </form>
             </div>
