--- a/basics/templates/basics/information_view.html
+++ b/basics/templates/basics/information_view.html
@@ -1,50 +1,112 @@
 {% extends 'basics/base.html' %}
-
+{% load filter %}
 {% block content %}
-  <div class="row">
-
-    <div class="[ col-xs-12 col-sm-offset-2 col-sm-8 ]">
+<!-- modal for every information -->
+<div id="standard-modal">
     <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="text-center">{{information.headline}}</h1>
-      </div>
-      <div class="modal-body">
-        {{information.text}}
-
-      </div>
-      <div class="modal-footer">
-      </div>
-    </div>
-  	</div>
-  </div>
-  <div class="row">
-
-    <div class="[ col-xs-12 col-sm-offset-2 col-sm-8 ]">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="text-center">Comment</h1>
-      </div>
-      <div class="modal-body">
-        <form action="{% url 'basics:information_view_comment' pk=information.pk %}" method="post">
-          {%csrf_token%}
-          <textarea hint="Your comment" class="form-control" name="comment_text" rows="3"></textarea>
-          <br>
-          <button type="submit " class="btn btn-primary">Submit</button>
-        </form>
-        <br>
-        {% for comment in comments%}
-        <div class="modal-content">
-          <div class="modal-body">
-            {{comment.text}}
-          </div>
-          <div class="modal-footer">
-            {{comment.author}}
-          </div>
+        <div class="modal-header">
+            <div class="row">
+                <div class="col-sm-9">
+                    <h2>{{information.headline}}</h2>
+                    <h6>from: {{ information.date }} </h6>
+                </div>
+                <div class="col-sm-3">
+                    <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups" style="float: right">
+                            <a id="standard-grey-button-light" class="btn btn-default btn-sml" type="button" href="{% url 'basics:information_all' %}" style="margin-top: 15px; margin-bottom: 15px;"><span class="glyphicon glyphicon-chevron-left"></span> Back</a>
+                    </div>
+                </div>
+            </div>
         </div>
-        {% endfor %}
-      </div>
+        <div class="modal-body">
+            <p>{{ information.text | linebreaksbr }}</p>
+            <h5>Location:</h5>
+            <div id="map-container" style="height: 450px; margin-top: 15px; margin-bottom: 20px;"></div>
+            <div class="list-group">
+                {% for comment in comments %}
 
+                    <!-- list all informations -->
+                    <a class="list-group-item" id="standard-list-group-item-div">
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <p class="list-group-item-text">{{ comment|get_short_text:160 }}</p>
+                            </div>
+                            <div class="col-sm-12">
+                                <h6><br>from: {{ comment.date }} / number of reports: </h6>
+                            </div>
+                        </div>
+                    </a>
+                {% empty %}
+                    <h4>There are no comments for this information.</h4>
+                {% endfor %}
+            </div>
+
+            <form action="{% url 'basics:information_view_comment' pk=information.pk %}" method="post">
+              {%csrf_token%}
+              <textarea hint="Your comment" class="form-control" name="comment_text" rows="3"></textarea>
+              <br>
+              <button id="standard-grey-button-light" type="submit " class="btn btn-primary">Submit</button>
+            </form>
+
+        </div>
+
+        <div class="modal-footer">
+            <a id="standard-grey-button-light" class="btn btn-default btn-sml" type="button" href="{% url 'basics:information_all' %}" style="float: right; margin: 15px;"><span class="glyphicon glyphicon-chevron-left"></span> Back</a>
+        </div>
     </div>
-  	</div>
-  </div>
+</div>
+
+<script src="http://maps.googleapis.com/maps/api/js"></script>
+<script>
+
+    var map;
+    var marker;
+    var myCenter=new google.maps.LatLng(51.508742,-0.120850);
+    var geocoder;
+    var infowindow;
+    var directionsService = new google.maps.DirectionsService;
+    var directionsDisplay = new google.maps.DirectionsRenderer;
+    function initialize() {
+        geocoder = new google.maps.Geocoder()
+        var mapProp = {
+            center:myCenter,
+            zoom:2,
+            mapTypeId:google.maps.MapTypeId.ROADMAP,
+            mapTypeControl: false,
+            panControl:false,
+            rotateControl:false,
+            mapTypeControl:true,
+            streetViewControl: false
+        };
+        marker=null;
+
+        map = new google.maps.Map(document.getElementById("map-container"),mapProp);
+
+        placeMarker(new google.maps.LatLng(parseFloat("{{ information.address.latitude }}".replace(",", ".")), parseFloat("{{ information.address.longditude }}".replace(",", "."))));
+  }
+
+  function placeMarker(location) {
+      if(marker){
+          infowindow.close();
+          marker.setPosition(location);
+          geocoder.geocode({'location': location}, function(results, status){
+              infowindow.setContent(results[0].formatted_address);
+              infowindow.open(map,marker);
+          })
+      }else{
+          marker = new google.maps.Marker({
+          position: location,
+          map: map,
+          });
+          geocoder.geocode({'location': location}, function(results, status){
+              infowindow = new google.maps.InfoWindow({content: results[0].formatted_address});
+              infowindow.open(map,marker);
+          })
+          map.setZoom(8);
+      }
+      map.setCenter(marker.getPosition());
+  }
+  google.maps.event.addDomListener(window, 'load', initialize);
+
+</script>
+
 {% endblock %}
